<resources>
    <string name="app_name" translatable="false">asilApp</string>
    <string name="userRecognition">User Recognition</string>
    <string name="personalData">Personal Data</string>
    <string name="informationSection" translatable="false">Info</string>
    <string name="medicalRecords">Medical Records</string>
    <string name="questionnaires">Questionnaries</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="video" translatable="false">Video</string>
    <string name="acceptance">Acceptance</string>
    <string name="cityInfo">City Info</string>
    <string name="bylaw">Bylaw</string>
    <string name="myInfo">My Info</string>
    <string name="sf12Questionnaires">SF12</string>
    <string name="habitsQuestionnaires">Habits</string>
    <string name="usefulNumbers">Useful Numbers</string>
    <string name="demographicQuestionnaires">Demographic</string>
    <string name="qualityOfLifeQuestionnaires">Quality Of Life</string>
    <string name="Video1">First video</string>
    <string name="Video2">Second video</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="birth_place">Birth place</string>
    <string name="gender">Gender</string>
    <string name="email" translatable="false">Email</string>
    <string name="cell" translatable="false">Cell</string>
    <string name="radioBtnMale" translatable="false">M</string>
    <string name="radioBtnFemale" translatable="false">F</string>
    <string name="titleAcceptance">Reception Center</string>
    <string name="centerName">Center name</string>
    <string name="centerLocation">Location</string>
    <string name="centerAddress">Address</string>
    <string name="centerServices">Services</string>
    <string name="centerRegulation">Internal Regulation</string>
    <string name="ambulance">Ambulance</string>
    <string name="firebrigade">Fire Brigade</string>
    <string name="police">Police</string>
    <string name="militarypolice">Military Police</string>
    <string name="financeguard">Finance Guard</string>
    <string name="seaemergency">Sea Emergency</string>
    <string name="pathology">Pathology</string>
    <string name="retrieveBasicNecessities">Retrieve basic necessities</string>
    <string name="appDetails">App details</string>
    <string name="rating">Rating</string>
    <string name="temperature">Temperature</string>
    <string name="bloodPressure">Blood pressure</string>
    <string name="glycemia">Glycemia</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="ecg" translatable="false">ECG</string>
    <string name="symptoms">Symptoms</string>
    <string name="ambulatory">Ambulatory</string>
    <string name="municipality">Municipality</string>
    <string name="postoffice">Post office</string>
    <string name="placesofworship">Places of worship</string>
    <string name="school">School</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="searchPatient">Search patient</string>
    <string name="kitOpening">Kit opening</string>
    <string name="patientList">Visited patients</string>
    <string name="insertCode">Insert patient\'s code</string>
    <string name="search">Search</string>
    <string name="alternative">OR</string>
    <string name="scan">Scan QR code</string>
    <string name="cityRating">How would your rate your city?</string>
    <string name="appRating">How would your rate this application?</string>
    <string name="centerRating">How would your rate your center?</string>
    <string name="comment">Add a comment (optional)</string>
    <string name="submit">Submit</string>
    <string name="food">Food goods</string>
    <string name="medicines">Medicines</string>
    <string name="goMarket">Go to the convientioned market: </string>
    <string name="goPharmacy">Go to the convientioned pharmacy: </string>
    <string name="ask">Ask for: </string>
    <string name="show">Show your personal code: </string>
    <string name="add" translatable="false">+</string>
    <string name="pressure">Pressure</string>
    <string name="lastMeasurement">Last Measurement</string>
    <string name="addMeasurement">Add New Measurement</string>
    <string name="addUser">Add user</string>
    <string name="itch">Itch</string>
    <string name="fever">Fever</string>
    <string name="thirst">Thirst</string>
    <string name="bonesPain">Bones Pain</string>
    <string name="arthralgia">Arthralgia</string>
    <string name="paresthesia">Paresthesia</string>
    <string name="cramps">Cramps</string>
    <string name="dyspnoea">Dyspnoea</string>
    <string name="insomnia">Insomnia</string>
    <string name="nausea" translatable="false">Nausea</string>
    <string name="asthenia">Asthenia</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="nutritionalSuggestions">Nutritional Suggestions</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="addFood">Add retriving necessities</string>
    <string name="readRatings">Read ratings</string>
    <string name="addAcceptance">Add new acceptance</string>
    <string name="healthStandards">Health standards</string>
    <string name="internalRegulation">Internal regulation</string>
    <string name="norms">Behaviour norms</string>
    <string name="readNorms">Click here to read the internal regulation</string>
    <string name="discoverable">Make discoverable</string>
    <string name="on">ON</string>
    <string name="btnSend">send</string>
    <string name="off">Bluetooth Off</string>
    <string name="pages">Pages</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation draw</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation draw</string>
    <string name="chooseFile">Choose a file</string>
    <string name="password" translatable="false">Password</string>
    <string name="city">City</string>
    <string name="mallLocation">Mall location</string>
    <string name="pharmacyLocation">Pharmacy location</string>
    <string name="backHome">Go to Home</string>
    <string name="downloadSuccess">File downloaded</string>
    <string name="role">Role</string>
    <string name="survey">Take it</string>
    <string name="language">Change language</string>
    <string name="it">Italian</string>
    <string name="eng">English</string>
    <string name="nationality">Nationality</string>
    <string name="showPatient">Show Patient List</string>
    <string name="showMore">Show more</string>
    <string name="nation">Nation</string>
    <string name="welcoming">Welcoming Reception</string>
    <string name="bodyweight">Body weight</string>
    <string name="mas">Medical Assistance Service</string>
    <string name="paired">Paired</string>
    <string name="detected">Detected</string>
    <string name="services">List of services provided by the center</string>
    <string name="readAnswers">Read answers</string>
    <string name="bylawDescription">Registration to the national health service (ssn). Download this PDF to read the legislative decree on the obligation to register with the national health system</string>
    <string name="normsDescription">Internal regulations of the agreements for
reception of migrants for application of international protection. Download this PDF to read your rights and duties. Before the download choose your language</string>
    <string name="learn">Learn how to use this application by watching this video</string>
    <string name="avg">Avg</string>
    <string name="celsius" translatable="false">°C</string>
    <string name="signout">Logout</string>

    <plurals name="visitedPatient">
        <item quantity="one">Visited patient</item>
        <item quantity="other">Visited patients</item>
    </plurals>
    <string name="notSupported">Temperature not available</string>
    <string name="personalCode">Personal QR code</string>


</resources>
