<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/homeMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeAdmin"
            android:title="@string/backHome" />
        <item
            android:id="@+id/nav_homeDoctor"
            android:title="@string/backHome" />

        <item
            android:id="@+id/nav_home"
            android:title="@string/backHome" />
    </group>

    <group android:id="@+id/actionMenu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_personalData"
            android:title="@string/personalData" />

        <item
            android:id="@+id/nav_info"
            android:title="@string/informationSection" />

        <item
            android:id="@+id/nav_medicalRecords"
            android:title="@string/medicalRecords" />

        <item
            android:id="@+id/nav_questionnaires"
            android:title="@string/questionnaires" />

        <item
            android:id="@+id/nav_search_patient"
            android:title="@string/searchPatient" />

        <item
            android:id="@+id/nav_kit_opening"
            android:title="@string/kitOpening" />

        <item
            android:id="@+id/nav_visited_patient"
            android:title="@string/patientList" />

        <item
            android:id="@+id/nav_video"
            android:title="@string/video" />

        <item
            android:id="@+id/nav_add_user"
            android:title="@string/addUser" />

        <item
            android:id="@+id/nav_add_new_acceptance"
            android:title="@string/addAcceptance" />

        <item
            android:id="@+id/nav_add_retrive_necessities"
            android:title="@string/addFood" />

        <item
            android:id="@+id/nav_read_ratings"
            android:title="@string/readRatings" />
    </group>
    <group android:id="@+id/logoutMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/signout" />
    </group>
</menu>