<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/asilapp"
            android:title="@string/backHome" />

        <item
            android:id="@+id/nav_add_user"
            android:icon="@drawable/adduser"
            android:title="@string/addUser" />

        <item
            android:id="@+id/nav_add_new_acceptance"
            android:icon="@drawable/addacceptance"
            android:title="@string/addAcceptance" />


        <item
            android:id="@+id/nav_add_retrive_necessities"
            android:icon="@drawable/addfood"
            android:title="@string/addFood" />


        <item
            android:id="@+id/nav_read_ratings"
            android:icon="@drawable/readratings"
            android:title="@string/readRatings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/app"
            android:title="Sign Out" />

    </group>
</menu>