<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_patient"
            android:icon="@drawable/searchpatient"
            android:title="@string/searchPatient" />

        <item
            android:id="@+id/nav_kit_opening"
            android:icon="@drawable/kitopening"
            android:title="@string/kitOpening" />


        <item
            android:id="@+id/nav_visited_patient"
            android:icon="@drawable/patientlist"
            android:title="@string/patientList" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/app"
            android:title="Sign Out" />

    </group>
</menu>